--- a/package.json
+++ b/package.json
@@ -1,33 +1,47 @@
 {
   "name": "chatpp",
+  "version": "6.0.0",
   "description": "A Chatwork Enhancement Toolkit",
-  "keywords": [
-    "Chatwork",
-    "Chatpp",
-    "Chrome",
-    "Extension",
-    "Firefox",
-    "Extension"
-  ],
-  "author": "Tran Duc Thang - Nguyen Anh Tien",
+  "main": "index.js",
+  "scripts": {
+    "build": "node utils/build.js",
+    "start": "node utils/webserver.js",
+    "test": "echo \"Error: no test specified\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/wataridori/chatpp.git"
+  },
+  "author": "",
   "license": "GPL-3.0",
   "bugs": {
     "url": "https://github.com/wataridori/chatpp/issues"
   },
-  "homepage": "https://chatpp.thangtd.com",
-  "private": true,
-  "dependencies": {
-    "babel-plugin-transform-class-properties": "^6.4.0",
-    "babel-preset-es2015": "^6.3.13",
-    "babel-preset-react": "^6.3.13",
-    "gulp": "^3.9.0",
-    "laravel-elixir": "6.0.0-9"
-  },
-  "scripts": {
-    "test": "eslint src"
-  },
+  "homepage": "https://github.com/wataridori/chatpp#readme",
   "devDependencies": {
-    "babel-eslint": "^6.0.0",
-    "laravel-elixir-browserify-official": "^0.1.3"
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.1",
+    "babel-preset-env": "^1.6.0",
+    "css-loader": "^0.28.5",
+    "file-loader": "^0.11.2",
+    "fs-extra": "^4.0.1",
+    "html-loader": "^0.5.1",
+    "html-webpack-plugin": "^2.30.1",
+    "style-loader": "^0.18.2",
+    "url-loader": "^0.5.9",
+    "vue-loader": "^13.0.4",
+    "vue-template-compiler": "^2.4.2",
+    "webpack": "^3.5.5",
+    "webpack-dev-server": "^2.7.1",
+    "write-file-webpack-plugin": "^4.1.0"
+  },
+  "dependencies": {
+    "bluebird": "^3.5.0",
+    "bootstrap": "^3.3.7",
+    "jquery": "^3.2.1",
+    "lodash": "^4.17.4",
+    "vue": "^2.4.2",
+    "vue-meta": "^1.1.0",
+    "vue-router": "^2.7.0"
   }
 }
